--- a/src/pages/WordGame.module.scss
+++ b/src/pages/WordGame.module.scss
@@ -1,11 +1,12 @@
 .page {
-  flex: 1;
+  width: 100%;
+  max-width: 600px;
+  min-width: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  max-width: 600px;
   padding: 40px 16px;
 }
 
